# Rewire

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4cf3416153d6_initial_migration.py  75c43cce42c9_add_recoveryplan_model.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  llm.py
backend/app/ai/agents/: __init__.py  coach_agent.py  state.py
backend/app/ai/ml/: __init__.py  trigger_detector.py
backend/app/ai/prompts/: __init__.py  assessment.py  coach_system.py  intervention.py
backend/app/api/v1/: assessment.py  auth.py  coach.py  dashboard.py  emergency.py  health.py  journal.py  onboarding.py  plan.py  router.py  users.py
backend/app/core/: config.py  dependencies.py  exceptions.py  logging.py  security.py
backend/app/db/: session.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  addiction_profile.py  assessment.py  conversation.py  gamification.py  journal_entry.py  recovery_plan.py  recovery_score.py  refresh_token.py  trigger.py  user.py
backend/app/repositories/: addiction_profile_repository.py  assessment_repository.py  base_repository.py  conversation_repository.py  journal_repository.py  recovery_score_repository.py  refresh_token_repository.py  trigger_repository.py  user_repository.py
backend/app/schemas/: assessment.py  auth.py  coach.py  dashboard.py  gamification.py  journal.py  user.py
backend/app/services/: assessment_service.py  auth_service.py  coach_service.py  dashboard_service.py  gamification_service.py  journal_service.py  plan_service.py  trigger_service.py  user_service.py
backend/app/workers/: __init__.py  celery_app.py
backend/app/workers/tasks/: __init__.py  daily_scoring.py  trigger_analysis.py
docker/: prometheus.yml  promtail-config.yaml
docker/grafana/provisioning/dashboards/: rewire-dashboard.json
frontend/: package-lock.json  package.json
frontend/public/: model2.glb
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/coach/: page.tsx
frontend/src/app/dashboard/journal/: page.tsx
frontend/src/app/emergency/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/components/ui/: input.tsx
frontend/src/lib/: api.ts  store.ts
