[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rewire"
version = "0.1.0"
description = "AI Addiction Recovery Platform — Your second brain for defeating dopamine addiction"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Rewire" }]

dependencies = [
    # ── Web Framework ─────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # ── Database ──────────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # ── Pydantic ──────────────────────────────────────────────────────────────
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # ── Auth ──────────────────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.18",

    # ── Redis & Cache ─────────────────────────────────────────────────────────
    "redis[hiredis]>=5.2.0",

    # ── Celery ────────────────────────────────────────────────────────────────
    "celery[redis]>=5.4.0",

    # ── AI / LLM ──────────────────────────────────────────────────────────────
    "litellm>=1.40.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",

    # ── HTTP Client ───────────────────────────────────────────────────────────
    "httpx>=0.28.0",

    # ── Logging ───────────────────────────────────────────────────────────────
    "structlog>=24.4.0",

    # ── Monitoring ────────────────────────────────────────────────────────────
    "prometheus-fastapi-instrumentator>=7.0.0",

    # ── Utilities ─────────────────────────────────────────────────────────────
    "orjson>=3.10.0",
    "python-ulid>=3.0.0",

    # ── SSE for streaming ────────────────────────────────────────────────────
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "faker>=33.0.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-passlib>=1.7.7",
    "aiosqlite>=0.20.0",
]

ml = [
    "xgboost>=2.1.0",
    "scikit-learn>=1.5.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.hatch.envs.default]
features = ["dev"]
